# ferrofeed

./: CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
examples/: test_feed.rs
src/: client.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  ui.rs
src/commands/: add_feed.rs  list.rs  remove_feed.rs  schedule.rs  sync.rs
src/config/: default.toml
src/ui/: popup.rs  rich_text.rs
tests/: cli_test.rs  commands_test.rs
