[package]
name = "ferrofeed"
version = "0.1.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.29.0"
time = "0.3.44"
toml = "0.9.7"
