[package]
name = "ferrofeed"
version = "0.1.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
description = """
A RSS CLI and TUI for managing, viewing, and exporting RSS/Atom feeds.
"""
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/micahkepe/ferrofeed"
repository = "https://github.com/micahkepe/ferrofeed"

[[bin]]
name = "ferrofeed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.29.0"
time = "0.3.44"
toml = "0.9.7"
serde = { version = "1.0.226", features = ["derive"] }
directories = "6.0.0"
feed-rs = "2.3.1"
grep = "0.3.2"
html2text = "0.15.5"
